--- a/src/main/resources/templates/mypage/contents.html
+++ b/src/main/resources/templates/mypage/contents.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: head('mypage')">
 </head>
-
+<script th:src="@{/js/common.js}"></script>
 <body>
 <nav class="bg-dark" th:replace="layout/layout :: menu('mypage')">
 </nav>
@@ -38,32 +38,48 @@
             </li>
         </ul>
 
-        <div class="tab-content h-75">
-            <div class="tab-pane h-100 bg-white fade show active">
+        <div class="tab-content overflow-auto">
+            <div class="tab-pane bg-white fade show active pb-2">
                 <div class="row p-0 m-0">
-                    <div class="p-3" style="font-size: .75rem !important;">
+                    <div class="p-3">
 
-                        <div class="d-flex justify-content-between align-items-center mb-2">
+                        <div class="d-flex justify-content-between align-items-center mb-2 pb-2">
                             <h2>작성글</h2>
                         </div>
 
-                        <table class="table">
-                            <thead class="text-center fw-bold">
-                            <tr>
-                                <th>제목</th>
-                                <th>작성일시</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="myContent : ${myContents.dtoList}">
-                                <td th:text="${myContent.title}"></td>
-                                <td>[[${#temporals.format(myContent.createdAt, 'yyyy/MM/dd')}]]</td>
-                            </tr>
-                            </tbody>
-                        </table>
+                        <div class="border-bottom align-items-end p-2" th:each="myContent : ${myContents.dtoList}">
+                            <div class="pt-1">
+                                <button class="btn btn-white p-0" th:onclick="originalBoard([[${myContent.boardId}]])">
+                                    <span class="text-danger fs-5">[[${myContent.title}]]</span></button>
+                            </div>
+                            <div class="p-1 d-flex justify-content-between">
+                                <div><span>[[${#temporals.format(myContent.createdAt, 'yyyy-MM-dd')}]]</span></div>
+
+                                <button class="btn btn-outline-secondary py-0 px-1" type="button"
+                                        th:onclick="deMyBoard([[${myContent.boardId}]])"><span><i
+                                        class="fa fa-trash"></i></span></button>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
+                <footer class="footer mt-auto py-3">
+                    <ul class="pagination justify-content-center align-items-center">
+                        <li class="page-item" th:if="${myContents.prev}">
+                            <a th:href="@{/mypage/contents(page=${myContents.start -1})}" tabindex="-1"> < </span></a>
+                        </li>
+                        <li class="page-item" th:each="page: ${myContents.pageList}">
+                            <a class="page-link" th:href="@{/mypage/contents(page=${page})}"
+                               th:classappend="${myContents.page == page} ? 'bg-primary text-white'">
+                                <span>[[${page}]]</span>
+                            </a>
+                        </li>
+                        <li class="page-item" th:if="${myContents.next}">
+                            <a class="page-link"
+                               th:href="@{/mypage/contents(page=${myContents.end +1})}"><span> > </span></a>
+                        </li>
+                    </ul>
+                </footer>
             </div>
 
         </div>
@@ -75,6 +91,27 @@
 <div id="sidebar" th:replace="layout/layout :: sidebar('mypage')">
 </div>
 <!-- // SIDEBAR -->
+<script>
+
+    function deMyBoard(boardId) {
+        $.ajax({
+            url: "/deMyBoard",
+            type: "POST",
+            data: {
+                boardId: boardId
+            },
+            success: function (result) {
+                if (result == true) {
+                    location.reload();
+                } else {
+                    console.log("삭제에 실패했습니다.");
+                }
+            }
+
+        })
+    }
+
+</script>
 
 </body>
 
