--- a/src/main/resources/templates/mypage/likes.html
+++ b/src/main/resources/templates/mypage/likes.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: head('mypage')">
 </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <body>
 <nav class="bg-dark" th:replace="layout/layout :: menu('mypage')">
@@ -10,7 +11,7 @@
 
 <section>
 
-    <div class="main col-lg-8 m-auto h-100 p-3">
+    <div class="main col-lg-8 m-auto p-3">
 
         <div class="text-end">
             <a class="btn btn-dark p-1" th:href="@{/logout}"><span>로그아웃</span></a>
@@ -22,7 +23,7 @@
                     북마크
                 </a>
             </li>
-            <li class="nav-item" >
+            <li class="nav-item">
                 <a class="nav-link" type="button" th:href="@{/mypage/contents}">
                     작성글
                 </a>
@@ -39,34 +40,53 @@
             </li>
         </ul>
 
-        <div class="tab-content h-75">
-
-            <div class="tab-pane h-100 bg-white fade show active">
+        <!--    -->
+        <div class="tab-content overflow-auto">
+            <div class="tab-pane bg-white fade show active pb-2 h-100">
                 <div class="row p-0 m-0">
-                    <div class="p-3" style="font-size: .75rem !important;">
-                        <div class="d-flex justify-content-between align-items-center mb-2">
+                    <div class="p-3">
+
+                        <div class="d-flex justify-content-between align-items-center mb-2 pb-2">
                             <h2>좋아요 한 게시글</h2>
                         </div>
 
-                        <table class="table">
-                            <thead class="text-center fw-bold">
-                            <tr>
-                                <th>제목</th>
-                                <th>작성일시</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="myLike : ${myLikes.dtoList}">
-                                <td th:text="${myLike.title}"></td>
-                                <td>[[${#temporals.format(myLike.createdAt, 'yyyy/MM/dd')}]]</td>
-                            </tr>
-                            </tbody>
-                        </table>
+                        <div class="border-bottom align-items-end p-2" th:each="myLike : ${myLikes.dtoList}">
+                            <div class="pt-1">
+                                <button class="btn btn-white p-0" th:onclick="originalBoard([[${myLike.boardId}]])"><span class="text-danger fs-5">[[${myLike.title}]]</span></button>
+                            </div>
+<!--                            likeId : <span>[[${myLike.likeId}]]</span>-->
+<!--                            boardId : <span>[[${myLike.boardId}]]</span>-->
+<!--                            userId : <span>[[${myLike.userId}]]</span>-->
+                            <div class="p-1 d-flex justify-content-between">
+                                <div><span>[[${#temporals.format(myLike.createdAt, 'yyyy-MM-dd')}]]</span></div>
+
+                                <button class="btn btn-outline-secondary py-0 px-1" type="button"
+                                        th:onclick="delLike([[${myLike.likeId}]])"><span><i class="fa fa-trash"></i></span></button>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
+                <footer class="footer mt-auto py-3">
+                    <ul class="pagination justify-content-center align-items-center">
+                        <li class="page-item" th:if="${myLikes.prev}">
+                            <a th:href="@{/mypage/likes(page=${myLikes.start -1})}" tabindex="-1"> < </span></a>
+                        </li>
+                        <li class="page-item" th:each="page: ${myLikes.pageList}">
+                            <a class="page-link" th:href="@{/mypage/likes(page=${page})}"
+                               th:classappend="${myLikes.page == page} ? 'bg-primary text-white'">
+                                <span>[[${page}]]</span>
+                            </a>
+                        </li>
+                        <li class="page-item" th:if="${myLikes.next}">
+                            <a class="page-link" th:href="@{/mypage/likes(page=${myLikes.end +1})}"><span> > </span></a>
+                        </li>
+                    </ul>
+                </footer>
             </div>
-        </div>
 
+        </div>
+        <!--    -->
     </div>
 </section>
 
@@ -74,6 +94,28 @@
 <div id="sidebar" th:replace="layout/layout :: sidebar('mypage')">
 </div>
 <!-- // SIDEBAR -->
+
+<script>
+
+
+    function delLike(likeId) {
+        $.ajax({
+            url: "/delLike",
+            type: "POST",
+            data: {
+                likeId: likeId
+            },
+            success: function(result) {
+                if (result == true) {
+                    location.reload();
+                } else {
+                    console.log("삭제에 실패했습니다.");
+                }
+            }
+
+        })
+    }
+</script>
 
 </body>
 
