--- a/src/main/resources/templates/disclosure/detail.html
+++ b/src/main/resources/templates/disclosure/detail.html
@@ -10,33 +10,35 @@
     <div class="main col-lg-9 m-auto px-lx-3 px-md-2 px-sm-0">
         <div class="pb-4 d-flex justify-content-between">
             <div class="w-100" style="height: 500px !important;">
-                <iframe style="width: 100%; height: 100%;" frameborder="0" th:src="'http://dart.fss.or.kr/dsaf001/main.do?rcpNo='+${rcptNo}"></iframe>
+                <iframe style="width: 100%; height: 100%;" frameborder="0" th:src="'https://dart.fss.or.kr/dsaf001/main.do?rcpNo='+${rcpNo}"></iframe>
             </div>
         </div>
-<!--        <div>-->
-<!--            <form action="" method="POST">-->
-<!--                <div class="input-group mb-3">-->
-<!--                    <input type="text" class="form-control" placeholder="의견을 남겨주세요" aria-describedby="button-addon2">-->
-<!--                    <button class="btn btn-outline-primary" type="button" id="button-addon2">저장</button>-->
-<!--                </div>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--        <div class="card bg-white w-100">-->
-<!--            <div class="card-body">-->
-<!--                <div class="d-flex justify-content-between">-->
-<!--                    <span>ㅇㅇㅇ</span>-->
-<!--                    <span>2021-01-15</span>-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    호재네요-->
-<!--                </div>-->
-<!--                <div class="text-end">-->
-<!--                    <button type="button" class="btn btn-outline-secondary p-1 border-0">-->
-<!--                        <i class="fa fa-trash"></i>-->
-<!--                    </button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div>
+            <form th:action="@{/comment/create/disclosure/{rcpNo}(rcpNo = ${rcpNo})}" th:method="POST">
+                <div class="input-group mb-3 p-1">
+                    <input type="text" class="form-control border-secondary" name="content" placeholder="의견을 남겨주세요" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><span>저장</span></button>
+                </div>
+            </form>
+        </div>
+        <div class="card mb-2 bg-white w-100" th:each="comment : ${comments}">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <span th:text="${comment.nickname}"></span>
+                    <span class="text-secondary">
+                        [[${#temporals.format(comment.createdAt, "yyyy-MM-dd")}]]
+                    </span>
+                </div>
+                <div th:text="${comment.content}">
+
+                </div>
+                <div class="text-end">
+                    <button type="button" class="btn btn-outline-secondary p-1 border-0">
+                        <i class="fa fa-trash"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
