REFACTOR: Remove duplicated stock name by search

--- a/src/main/resources/templates/main/search.html
+++ b/src/main/resources/templates/main/search.html
@@ -7,11 +7,11 @@
 <body>
 
 <!-- JQuery UI -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script th:src="@{/js/stocks.js}"></script>
+
 
 <script th:inline="javascript">
 
@@ -25,6 +25,7 @@
             }
         })
     });
+
 </script>
 
 
@@ -34,21 +35,18 @@
 <section>
     <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
 
-        <!--  -->
         <div class="row p-5">
             <h4 class="p-3">종목명으로 검색하세요.</h4>
-            <form th:action="@{/main/stock}" th:method="GET">
-                <div class="ui-widget d-flex">
-
-                    <input type="text" name="stockName" class="form-control" id="search_input">&nbsp;
-                    <button type="submit" class="btn btn-outline-primary px-2">
+            <form th:action="@{/stock}">
+                <div class="input-group">
+                    <input type="text" class="form-control border-secondary" name="stockName" id="search_input">
+                    <button type="submit" class="btn btn-outline-secondary">
                         <i class="fa fa-search"></i>
                     </button>
 
                 </div>
             </form>
         </div>
-        <!--  -->
 
     </div>
 </section>
@@ -57,7 +55,6 @@
 <div id="sidebar" th:replace="layout/layout :: sidebar('SEARCH')">
 </div>
 <!-- // SIDEBAR -->
-
 
 
 </body>
