--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -2,8 +2,6 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:replace="layout/layout :: head('LOGIN')"></head>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script th:src="@{/js/common.js}"></script>
 
 <body>
@@ -43,6 +41,12 @@
             <div class="w-100 py-2">
                 <label for="password"><span>비밀번호</span></label>
                 <input class="form-control" type="password" id="password" name="password">
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="remember-me" name="remember-me">
+                <label class="form-check-label">
+                    <span>로그인 유지하기</span>
+                </label>
             </div>
             <div class="w-100 py-3">
                 <button type="submit" class="btn btn-primary w-100">
